--- a/applications/backend/Dockerfile
+++ b/applications/backend/Dockerfile
@@ -1,12 +1,7 @@
-FROM node:20-alpine AS builder
-WORKDIR /app
-COPY package.json .
-RUN npm install
-COPY . .
-
 FROM node:20-alpine
 WORKDIR /app
-COPY --from=builder /app .
+COPY package.json .
+RUN npm install --production
+COPY index.js .
 EXPOSE 3000
-HEALTHCHECK CMD wget -qO- http://localhost:3000/health || exit 1
 CMD ["node", "index.js"]
