--- a/k8s/elk/filebeat.yaml
+++ b/k8s/elk/filebeat.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: filebeat
+  namespace: elasticsearch
 spec:
   selector:
     matchLabels:
@@ -11,14 +12,37 @@ spec:
       labels:
         app: filebeat
     spec:
+      serviceAccountName: filebeat
+      terminationGracePeriodSeconds: 30
       containers:
       - name: filebeat
         image: docker.elastic.co/beats/filebeat:9.1.6
-        args: ["-e"]
+        args: ["-c", "/usr/share/filebeat/filebeat.yml", "-e"]
+        securityContext:
+          runAsUser: 0
+        env:
+        - name: NODE_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.nodeName
         volumeMounts:
+        - name: config
+          mountPath: /usr/share/filebeat/filebeat.yml
+          subPath: filebeat.yml
+          readOnly: true
         - name: varlog
           mountPath: /var/log
+          readOnly: true
+        - name: data
+          mountPath: /usr/share/filebeat/data
       volumes:
+      - name: config
+        configMap:
+          name: filebeat-config
       - name: varlog
         hostPath:
           path: /var/log
+      - name: data
+        hostPath:
+          path: /var/lib/filebeat-data
+          type: DirectoryOrCreate
