--- a/k8s/elk/kibana.yaml
+++ b/k8s/elk/kibana.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: kibana
+  namespace: elasticsearch
 spec:
   replicas: 1
   selector:
@@ -17,16 +18,6 @@ spec:
         image: docker.elastic.co/kibana/kibana:9.1.6
         env:
         - name: ELASTICSEARCH_HOSTS
-          value: http://elasticsearch:9200
+          value: "http://elasticsearch.elasticsearch.svc.cluster.local:9200"
         ports:
         - containerPort: 5601
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: kibana
-spec:
-  selector:
-    app: kibana
-  ports:
-  - port: 5601
