--- a/k8s/backend/backend.yaml
+++ b/k8s/backend/backend.yaml
@@ -14,6 +14,30 @@ spec:
     spec:
       containers:
       - name: backend
-        image: m31llow/backend:latest
+        image: m31llow/backend:IMAGE_TAG
         ports:
         - containerPort: 3000
+
+        resources:
+          requests:
+            cpu: "100m"
+            memory: "128Mi"
+          limits:
+            cpu: "500m"
+            memory: "256Mi"
+
+        readinessProbe:
+          httpGet:
+            path: /ready
+            port: 3000
+          initialDelaySeconds: 10
+          periodSeconds: 5
+          failureThreshold: 3
+
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 3000
+          initialDelaySeconds: 30
+          periodSeconds: 10
+          failureThreshold: 3
