--- a/k8s/backend/backend.yaml
+++ b/k8s/backend/backend.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: backend
-        image: m31llow/backend:IMAGE_TAG
+        image: m31llow/backend:latest
         ports:
         - containerPort: 3000
 
