--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -1,8 +1,12 @@
-name: CI-CD
+name: CI-CD Backend
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
+
+env:
+  IMAGE_NAME: yourdockerhub/backend
 
 jobs:
   build-and-deploy:
@@ -12,22 +16,54 @@ jobs:
     - name: Checkout source
       uses: actions/checkout@v4
 
-    - name: Login Docker Hub
-      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+    # ------------------------
+    # Docker Login
+    # ------------------------
+    - name: Docker Login
+      run: |
+        echo "${DOCKER_PASSWORD}" | docker login -u "${DOCKER_USERNAME}" --password-stdin
+      env:
+        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build & Push Backend Image
+    # ------------------------
+    # Build & Push Image
+    # ------------------------
+    - name: Build and Push Docker Image
       run: |
         IMAGE_TAG=${GITHUB_SHA::7}
-        docker build -t m31llow/backend:$IMAGE_TAG applications/backend
-        docker push m31llow/backend:$IMAGE_TAG
+        docker build -t $IMAGE_NAME:$IMAGE_TAG .
+        docker push $IMAGE_NAME:$IMAGE_TAG
         echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
 
+    # ------------------------
+    # Setup kubeconfig
+    # ------------------------
     - name: Setup kubeconfig
       run: |
         mkdir -p ~/.kube
-        echo "${{ secrets.KUBECONFIG }}" | base64 -d > ~/.kube/config
+        echo "${KUBECONFIG_B64}" | base64 -d > ~/.kube/config
+      env:
+        KUBECONFIG_B64: ${{ secrets.KUBECONFIG_B64 }}
 
-    - name: Deploy Backend to Kubernetes
+    # ------------------------
+    # Verify Cluster
+    # ------------------------
+    - name: Verify Kubernetes connection
+      run: |
+        kubectl cluster-info
+        kubectl get nodes
+
+    # ------------------------
+    # Replace Image Tag
+    # ------------------------
+    - name: Update image tag
       run: |
         sed -i "s|IMAGE_TAG|${IMAGE_TAG}|g" k8s/backend/backend.yaml
+
+    # ------------------------
+    # Deploy
+    # ------------------------
+    - name: Deploy to Kubernetes
+      run: |
         kubectl apply -f k8s/backend/
