--- a/k8s/backend/backend.yaml
+++ b/k8s/backend/backend.yaml
@@ -2,8 +2,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: backend
+  namespace: backend
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: backend
@@ -14,30 +15,20 @@ spec:
     spec:
       containers:
       - name: backend
-        image: m31llow/backend:latest
+        image: yourdockerhub/backend:IMAGE_TAG
         ports:
-        - containerPort: 3000
-
-        resources:
-          requests:
-            cpu: "100m"
-            memory: "128Mi"
-          limits:
-            cpu: "500m"
-            memory: "256Mi"
+        - containerPort: 8080
 
         readinessProbe:
           httpGet:
-            path: /ready
-            port: 3000
-          initialDelaySeconds: 10
-          periodSeconds: 5
-          failureThreshold: 3
+            path: /health
+            port: 8080
+          initialDelaySeconds: 5
+          periodSeconds: 10
 
         livenessProbe:
           httpGet:
             path: /health
-            port: 3000
-          initialDelaySeconds: 30
-          periodSeconds: 10
-          failureThreshold: 3
+            port: 8080
+          initialDelaySeconds: 15
+          periodSeconds: 20
