--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -32,9 +32,13 @@ jobs:
     - name: Build and Push Docker Image
       run: |
         IMAGE_TAG=${GITHUB_SHA::7}
-        docker build -t $IMAGE_NAME:$IMAGE_TAG .
+        docker build \
+          -t $IMAGE_NAME:$IMAGE_TAG \
+          -f applications/backend/Dockerfile \
+          applications/backend
         docker push $IMAGE_NAME:$IMAGE_TAG
         echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
+
 
     # ------------------------
     # Setup kubeconfig
