--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -2,7 +2,8 @@ name: CI-CD
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
 
 env:
   IMAGE_NAME: m31llow/backend
@@ -12,6 +13,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    # ------------------------
+    # Checkout source code
+    # ------------------------
     - name: Checkout code
       uses: actions/checkout@v4
 
@@ -19,12 +23,13 @@ jobs:
     # Docker Login
     # ------------------------
     - name: Login Docker Hub
-      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login \
-        -u "${{ secrets.DOCKER_USERNAME }}" \
-        --password-stdin
+      run: |
+        echo "${{ secrets.DOCKER_PASSWORD }}" | docker login \
+          -u "${{ secrets.DOCKER_USERNAME }}" \
+          --password-stdin
 
     # ------------------------
-    # Build & Push Image
+    # Build & Push Docker Image
     # ------------------------
     - name: Build and Push Backend Image
       run: |
@@ -43,7 +48,7 @@ jobs:
       uses: helm/kind-action@v1.10.0
 
     # ------------------------
-    # Verify cluster
+    # Verify Kubernetes Cluster
     # ------------------------
     - name: Check cluster
       run: |
@@ -51,7 +56,7 @@ jobs:
         kubectl get nodes
 
     # ------------------------
-    # Deploy to Kubernetes
+    # Deploy Backend to Kubernetes
     # ------------------------
     - name: Deploy Backend
       run: |
