Update k8s backend add image policy

--- a/k8s/backend/backend.yaml
+++ b/k8s/backend/backend.yaml
@@ -16,6 +16,7 @@ spec:
       containers:
       - name: backend
         image: m31llow/backend:IMAGE_TAG
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 3000
 
