--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -10,41 +10,39 @@ env:
   NAMESPACE: backend
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout source
+    - name: Checkout
       uses: actions/checkout@v4
 
     # -------------------------
     # Docker
     # -------------------------
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
     - name: Login Docker Hub
       run: |
         echo "${{ secrets.DOCKER_PASSWORD }}" | docker login \
           -u "${{ secrets.DOCKER_USERNAME }}" \
           --password-stdin
 
-    - name: Build & Push Docker Image
+    - name: Build & Push Image
       run: |
         IMAGE_TAG=${GITHUB_SHA::7}
-        docker build -t $IMAGE_NAME:$IMAGE_TAG apps/backend
+        docker build -t $IMAGE_NAME:$IMAGE_TAG applications/backend
         docker push $IMAGE_NAME:$IMAGE_TAG
         echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
 
     # -------------------------
-    # Kubernetes (kind)
+    # Kubectl setup
     # -------------------------
-    - name: Create kind cluster
-      uses: helm/kind-action@v1.10.0
-      with:
-        cluster_name: ci-cluster
+    - name: Setup kubeconfig
+      run: |
+        mkdir -p ~/.kube
+        echo "${{ secrets.KUBECONFIG_DATA }}" > ~/.kube/config
+        chmod 600 ~/.kube/config
 
-    - name: Verify Kubernetes
+    - name: Verify cluster
       run: |
         kubectl cluster-info
         kubectl get nodes
@@ -52,7 +50,7 @@ jobs:
     # -------------------------
     # Deploy
     # -------------------------
-    - name: Deploy to Kubernetes
+    - name: Deploy backend
       run: |
         kubectl create namespace $NAMESPACE --dry-run=client -o yaml | kubectl apply -f -
 
@@ -60,5 +58,12 @@ jobs:
 
         kubectl apply -f k8s/backend/
 
+        kubectl rollout restart deployment/backend -n $NAMESPACE
         kubectl rollout status deployment/backend -n $NAMESPACE
 
+    # -------------------------
+    # Debug
+    # -------------------------
+    - name: Debug
+      run: |
+        kubectl get pods -n $NAMESPACE
