--- a/k8s/backend/backend-cm.yaml
+++ b/k8s/backend/backend-cm.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: backend-config
-spec:
-  data:
-    READY_DELAY: "5000"
-    PORT: "3000"
+  namespace: backend
+data:
+  PORT: "3000"
+  READY_DELAY: "3000"
