--- a/k8s/backend/backend.yaml
+++ b/k8s/backend/backend.yaml
@@ -4,7 +4,12 @@ metadata:
   name: backend
   namespace: backend
 spec:
-  replicas: 1
+  replicas: 2
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   selector:
     matchLabels:
       app: backend
@@ -15,32 +20,26 @@ spec:
     spec:
       containers:
       - name: backend
-        image: m31llow/backend:${IMAGE_TAG}
-        imagePullPolicy: IfNotPresent
+        image: m31llow/backend:latest
         ports:
         - containerPort: 3000
-
+        envFrom:
+        - configMapRef:
+            name: backend-config
         resources:
-          requests:
-            memory: "64Mi"
           limits:
-            cpu: "200m"
+            cpu: "500m"
+            memory: "256Mi"
+          requests:
+            cpu: "100m"
             memory: "128Mi"
-
-        readinessProbe:
-          httpGet:
-            path: /health
-            port: 3000
-          initialDelaySeconds: 5
-          periodSeconds: 10
-          timeoutSeconds: 2
-          failureThreshold: 3
-
         livenessProbe:
           httpGet:
             path: /health
             port: 3000
-          initialDelaySeconds: 15
-          periodSeconds: 20
-          timeoutSeconds: 2
-          failureThreshold: 3
+          initialDelaySeconds: 10
+        readinessProbe:
+          httpGet:
+            path: /ready
+            port: 3000
+          initialDelaySeconds: 5
