--- a/.github/workflows/backend.yaml
+++ b/.github/workflows/backend.yaml
@@ -1,54 +1,39 @@
-name: Backend CI/CD (Self Hosted)
+name: Backend CI/CD
 
 on:
   push:
-    branches: [main]
+    branches: [ main ]
     paths:
-      - "applications/backend/**"
-      - "k8s/backend/**"
-
-env:
-  IMAGE_NAME: m31llow/backend
-  KUBE_NAMESPACE: backend
+      - 'applications/backend/**'
+      - 'k8s/backend/**'
 
 jobs:
-  deploy-backend:
+  build-and-deploy:
     runs-on: self-hosted
+    env:
+      IMAGE_NAME: m31llow/backend
+      KUBE_NAMESPACE: backend
 
     steps:
-    - uses: actions/checkout@v4
+      - name: Cleanup Workspace
+        run: |
+          echo "Cleaning up old git metadata..."
+          rm -rf .git || true
 
-    - name: Set IMAGE_TAG
-      run: echo "IMAGE_TAG=${GITHUB_SHA::7}" >> $GITHUB_ENV
+      - name: Checkout Code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          clean: true
 
-    - name: Docker Login
-      run: |
-        echo "${{ secrets.DOCKER_PASSWORD }}" | docker login \
-          -u "${{ secrets.DOCKER_USERNAME }}" \
-          --password-stdin
+      - name: Docker Build & Push
+        run: |
+          docker build -t ${{ env.IMAGE_NAME }}:latest -t ${{ env.IMAGE_NAME }}:${{ github.sha }} ./applications/backend
+          docker push ${{ env.IMAGE_NAME }}:latest
+          docker push ${{ env.IMAGE_NAME }}:${{ github.sha }}
 
-    - name: Build & Push Image
-      run: |
-        docker build -t ${IMAGE_NAME}:${IMAGE_TAG} applications/backend
-        docker push ${IMAGE_NAME}:${IMAGE_TAG}
-
-    - name: Render Backend YAML
-      run: |
-        envsubst < k8s/backend/backend.yaml > k8s/backend/backend.rendered.yaml
-
-    - name: Ensure Namespace
-      run: |
-        kubectl get ns ${KUBE_NAMESPACE} || kubectl create ns ${KUBE_NAMESPACE}
-
-    - name: Deploy Backend
-      run: |
-        kubectl apply -n ${KUBE_NAMESPACE} -f k8s/backend/backend.rendered.yaml
-        kubectl apply -n ${KUBE_NAMESPACE} -f k8s/backend/service.yaml
-
-    - name: Rollout Restart
-      run: |
-        kubectl rollout restart deployment backend -n ${KUBE_NAMESPACE}
-
-    - name: Wait for Rollout
-      run: |
-        kubectl rollout status deployment backend -n ${KUBE_NAMESPACE}
+      - name: Deploy to K8s
+        run: |
+          kubectl apply -f k8s/backend/configmap.yaml
+          kubectl apply -f k8s/backend/backend.yaml
+          kubectl rollout restart deployment backend -n ${{ env.KUBE_NAMESPACE }}
