--- a/.github/workflows/backend.yaml
+++ b/.github/workflows/backend.yaml
@@ -34,6 +34,6 @@ jobs:
 
       - name: Deploy to K8s
         run: |
-          kubectl apply -f k8s/backend/configmap.yaml
+          kubectl apply -f k8s/backend/backend-cm.yaml
           kubectl apply -f k8s/backend/backend.yaml
           kubectl rollout restart deployment backend -n ${{ env.KUBE_NAMESPACE }}
