--- a/k8s/backend/backend.yaml
+++ b/k8s/backend/backend.yaml
@@ -31,6 +31,7 @@ spec:
             cpu: "500m"
             memory: "256Mi"
           requests:
+            cpu: "100m"
             memory: "128Mi"
         livenessProbe:
           httpGet:
