--- a/k8s/elk/elasticsearch.yaml
+++ b/k8s/elk/elasticsearch.yaml
@@ -45,6 +45,7 @@ spec:
 
         resources:
           requests:
+            memory: "512Mi"
             cpu: "250m"
           limits:
             memory: "1Gi"
